fix(deps): update dependency org.springframework.boot:spring-boot-starter-parent to v4 (#1076)
* fix(deps): update dependency org.springframework.boot:spring-boot-starter-parent to v4

* initial changes to upgrade

* fix : upgrading

* implement code review comments

* apply spring-javaformat

* implement code review comments

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Raja Kolli <rajadilipkolli@gmail.com>