@@ -1,7 +1,5 @@
 package com.sivalabs.moviebuffs.importer;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.opencsv.CSVIterator;
 import com.opencsv.CSVReader;
 import com.opencsv.exceptions.CsvValidationException;
@@ -22,10 +20,16 @@ import org.springframework.core.io.ClassPathResource;
 import org.springframework.data.domain.Sort;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
+import tools.jackson.databind.json.JsonMapper;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.Arrays;
+import java.util.Set;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import static com.sivalabs.moviebuffs.core.utils.TimeUtils.millisToLongDHMS;
@@ -41,11 +45,11 @@ public class MovieDataImporter {
 
 	private final DataImportProperties dataImportProperties;
 
-	private final ObjectMapper objectMapper;
+	private final JsonMapper objectMapper;
 
 	private static final int MAX_CAST_MEMBERS_PER_MOVIE = 10;
 
-	private static final List<String> CREW_JOBS_TO_IMPORT = Arrays.asList("PRODUCER", "DIRECTOR");
+	private static final List<String> CREW_JOBS_TO_IMPORT = List.of("PRODUCER", "DIRECTOR");
 
 	@Async
 	public void importDataAsync() throws IOException, CsvValidationException {
@@ -227,12 +231,12 @@ public class MovieDataImporter {
 			.build();
 	}
 
-	private List<CastMemberRecord> getCastMembers(String castArrayJson) throws JsonProcessingException {
+	private List<CastMemberRecord> getCastMembers(String castArrayJson) {
 		CastMemberRecord[] castMembers = objectMapper.readValue(castArrayJson, CastMemberRecord[].class);
 		return Arrays.asList(castMembers);
 	}
 
-	private List<CrewMemberRecord> getCrewMembers(String crewArrayJson) throws JsonProcessingException {
+	private List<CrewMemberRecord> getCrewMembers(String crewArrayJson) {
 		CrewMemberRecord[] crewMembers = objectMapper.readValue(crewArrayJson, CrewMemberRecord[].class);
 		return Arrays.asList(crewMembers);
 	}
